fixes too long words

--- a/src/less/_teampage.less
+++ b/src/less/_teampage.less
@@ -42,6 +42,9 @@
 
 .bo-card-content {
   padding: 20px;
+  .bo-text {
+    word-wrap: break-word;
+  }
 }
 
 .bo-card-info {
